src/test/deca/context/valid/created/unaire/not.deca
// Description :
//		test minus
//
// Resultats :
//		Ok

{
boolean b;
b = !true;
b = !false;
b = !b;
b = !(b == b);
}