src/test/deca/context/invalid/created/binary_exp/op_bool/and_null_true.deca
// Description :
//    test and entre un null et un true
//
// Resultats :
//		Erreur contextuelle
//    	Ligne 12: (3.33) Type gauche null. Type droit true Type attendu: ‘boolean’
class A{}
{
boolean c = null && true;
}
